--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@apollo/client": "^3.7.9",
+		"graphql": "^16.6.0",
+		"svelte-apollo": "^0.5.0"
+	}
 }
